--- a/site/templates/twig/quotes/quote/edit/lookup/js/classes.js.twig
+++ b/site/templates/twig/quotes/quote/edit/lookup/js/classes.js.twig
@@ -1,3 +1,4 @@
+{% include 'quotes/quote/edit/lookup/js/classes/PricingModal.js.twig' %}
 {% include 'quotes/quote/edit/lookup/js/classes/Config.js.twig' %}
 {% include 'quotes/quote/edit/lookup/js/classes/Alerts.js.twig' %}
 {% include 'quotes/quote/edit/lookup/js/classes/Inputs.js.twig' %}
