--- a/site/templates/twig/quotes/quote/edit/lookup/js/classes/Requests.js.twig
+++ b/site/templates/twig/quotes/quote/edit/lookup/js/classes/Requests.js.twig
@@ -36,6 +36,15 @@ class LookupRequests {
 		});
 	}
 
+	getPricing(itemID, custID, callback) {
+		var ajax   = new AjaxRequest('{{ page.jsonapiURL('mso/eso/pricing') }}');
+
+		ajax.setData({itemID: itemID, custID: custID});
+		ajax.request(function(response) {
+			callback(response)
+		});
+	}
+
 	getCustomer(custID, callback) {
 		var ajax = new AjaxRequest('{{ page.jsonapiURL('mar/customer/') }}');
 
