--- a/site/templates/twig/mar/arproc/ecr/customer/display.twig
+++ b/site/templates/twig/mar/arproc/ecr/customer/display.twig
@@ -41,3 +41,7 @@
 		</div>
 	{% endblock %}
 </div>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#payRangeModal">
+  Launch demo modal
+</button>
+{% include 'mar/arproc/ecr/customer/pay-range-modal.twig' %}
