--- a/site/templates/twig/code-tables/map/bum/form.twig
+++ b/site/templates/twig/code-tables/map/bum/form.twig
@@ -1,25 +1,24 @@
-{# bum is an instance of ApBuyer #}
-<form action="{{ page.url }}" method="POST" id="code-edit-form" data-code="">
-	<input type="hidden" name="table" value="bum">
-	<input type="hidden" name="serialized" value="" disabled>
+{# vtm is an instance of ApTypeCode #}
+<form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-code="">
+	<input type="hidden" name="action" value="update">
 
 	<div class="form-group">
 		<label for="code">Code</label>
-		<input type="text" name="code" class="form-control" maxlength="{{ max_length_code }}" value="" id="code">
+		<input type="text" name="code" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
 	</div>
 
 	<div class="form-group">
 		<label for="description">Description</label>
-		<input type="text" name="description" class="form-control" maxlength="20" value="" id="description">
+		<input type="text" name="description" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
 	<div class="form-group">
 		<label for="email">Email</label>
-		<input type="text" name="email" class="form-control email" maxlength="50" value="" id="email">
+		<input type="email" name="email" class="form-control form-control-sm" id="email">
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
-		<button type="submit" class="btn btn-success">
+		<button type="submit" class="btn btn-success form_button">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
 		<button type="button" class="btn btn-warning" data-dismiss="modal">
