--- a/site/templates/twig/code-tables/form.twig
+++ b/site/templates/twig/code-tables/form.twig
@@ -7,7 +7,7 @@
 
 {# data-code is for verifying edit vs new #}
 <form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-code="">
-	<input type="hidden" name="action" value="edit-code">
+	<input type="hidden" name="action" value="update">
 
 	<div class="form-group">
 		<label for="code">Code</label>
