--- a/site/templates/twig/code-tables/map/bum/.js.twig
+++ b/site/templates/twig/code-tables/map/bum/.js.twig
@@ -79,7 +79,7 @@ $(function() {
 				required: true,
 				maxlength: formCode.config.fields.code.maxlength,
 				remote: {
-					url: '{{ page.jsonApiUrl('map/validate/vtm/code/') }}',
+					url: '{{ page.jsonApiUrl('map/validate/bum/code/') }}',
 					type: "get",
 					data: {
 						jqv: 'true',
