--- a/site/templates/twig/code-tables/mso/lsm/list.twig
+++ b/site/templates/twig/code-tables/mso/lsm/list.twig
@@ -1,18 +1,50 @@
-<div class="list-group">
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	manager                Dplus\Codes\Base
+#}
+{% set response = manager.getResponse() %}
+
+{% set values = input.get %}
+{% set segments = input.urlSegments() %}
+{% set lastsegment = segments[segments|length] %}
+
+<div class="mb-3">
+	{% if page.is_print() %}
+		<button onclick="window.history.back();" class="btn btn-primary d-print-none">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back
+		</button>
+		&nbsp;
+		<button class="btn btn-primary d-print-none" onclick="window.print();return false;">
+			<i class="fa fa-print" aria-hidden="true"></i> Print
+		</button>
+	{% else %}
+		<a href="{{ page.menuUrl() }}" class="btn btn-primary">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ page.menuTitle() }}
+		</a>
+		&nbsp;
+		<a href="{{ page.get_printURL() }}" class="btn btn-primary">
+			<i class="fa fa-print" aria-hidden="true"></i> View Printable
+		</a>
+	{% endif %}
+</div>
+
+<div class="list-group codes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
-			<div class="col-2">
+			<div class="col-sm-2">
 				Code
 			</div>
-			<div class="col-5">
+			<div class="col-sm-4">
 				Description
 			</div>
-			<div class="col-2">
-				Update IW
+			<div class="col-sm-3">
+				Update Inventory Watch
 			</div>
-			<div class="col-3 text-center">
+			<div class="col-sm-3 text-center">
 				{% if page.is_print() == false %}
-					<button type="button" class="btn btn-light" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="" data-updateinventorywatch="">
+					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
 					</button>
 				{% endif %}
@@ -21,24 +53,24 @@
 	</div>
 	{% for code in codes %}
 		{# data-code attribute and class code is for the highlight on close #}
-		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.has_success() ) ? 'bg-success text-white' : ''}}">
+		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
 			<div class="row align-items-center">
-				<div class="col-2">
+				<div class="col-sm-2">
 					{{ code.code }}
 				</div>
-				<div class="col-5">
+				<div class="col-sm-4">
 					{{ code.description }}
 				</div>
-				<div class="col-2">
-					{{ code.updateinventorywatch|yesorno|capitalize }}
+				<div class="col-sm-3">
+					{{ code.updateinventorywatch|capitalize }}
 				</div>
-				<div class="col-3 text-center">
+				<div class="col-sm-3 text-center">
 					{% if page.is_print() == false %}
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-updateinventorywatch="{{ code.updateinventorywatch }}">
+						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.id }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 						</button>
 						&nbsp;
-						<a href="{{ page.get_codetable_code_deleteURL(page.codetable, code.code) }}" class="btn btn-danger btn-sm delete_button">
+						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
 							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
 					{% endif %}
