--- a/site/templates/twig/code-tables/mso/mfcm/form.twig
+++ b/site/templates/twig/code-tables/mso/mfcm/form.twig
@@ -1,36 +1,35 @@
 {# mfcm is an instance of MotorFreightCode #}
-<form action="{{ page.url }}" method="POST" id="code-edit-form" data-code="">
-	<input type="hidden" name="table" value="mfcm">
-	<input type="hidden" name="serialized" value="" disabled>
+<form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-code="">
+	<input type="hidden" name="action" value="update">
 
 	<div class="form-group">
 		<label for="code">Code</label>
-		<input type="text" name="code" class="form-control" maxlength="{{ max_length_code }}" value="" id="code">
+		<input type="text" name="code" class="form-control form-control-sm" maxlength="{{ manager.fieldAttribute('code', 'maxlength') }}" id="code">
 	</div>
 
 	<div class="form-group">
 		<label for="description">Description 1</label>
-		<input type="text" name="description" class="form-control" maxlength="50" value="" id="description">
+		<input type="text" name="description" class="form-control" maxlength="{{ manager.fieldAttribute('description', 'maxlength') }}" id="description">
 	</div>
 
 	<div class="form-group">
 		<label for="description2">Description 2</label>
-		<input type="text" name="description2" class="form-control" maxlength="50" value="" id="description2">
+		<input type="text" name="description2" class="form-control" maxlength="{{ manager.fieldAttribute('description2', 'maxlength') }}" id="description2">
 	</div>
 
 	<div class="form-group">
 		<label for="description3">Description 3</label>
-		<input type="text" name="description3" class="form-control" maxlength="50" value="" id="description3">
+		<input type="text" name="description3" class="form-control" maxlength="{{ manager.fieldAttribute('description3', 'maxlength') }}" id="description3">
 	</div>
 
 	<div class="form-group">
 		<label for="description4">Description 4</label>
-		<input type="text" name="description4" class="form-control" maxlength="50" value="" id="description4">
+		<input type="text" name="description4" class="form-control" maxlength="{{ manager.fieldAttribute('description4', 'maxlength') }}" id="description4">
 	</div>
 
 	<div class="form-group">
 		<label for="motorclass">Class</label>
-		<input type="text" name="motorclass" class="form-control" maxlength="4" value="" id="motorclass">
+		<input type="text" name="class" class="form-control" maxlength="{{ manager.fieldAttribute('class', 'maxlength') }}" id="motorclass">
 	</div>
 
 	<div class="d-flex justify-content-between align-items-center">
