Route Addm through inmain

--- a/site/templates/twig/items/itm/xrefs/addm/list/list.twig
+++ b/site/templates/twig/items/itm/xrefs/addm/list/list.twig
@@ -3,7 +3,7 @@
 {#
 	var                    Description / Instance of
 	-------------------------------------------------
-	page                   ProcessWire\Page(pw_template=addm)
+	page                   ProcessWire\Page(pw_template=inmain)
 	input                  ProcessWire\WireInput
 	itm                    module Itm
 	item                   ItemMasterItem
