--- a/site/templates/twig/min/inmain/addm/xref/form.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form.twig
@@ -1,7 +1,7 @@
 {#
 	var                    Description / Instance of
 	-------------------------------------------------
-	page                   ProcessWire\Page(pw_template=addm)
+	page                   ProcessWire\Page(pw_template=inmain)
 	input                  ProcessWire\WireInput
 	addm                   Dplus\Min\Inmain\Addm\Addm
 	xref                   ItemAddonItem
@@ -33,7 +33,7 @@
 				{% endif %}
 			{% endif %}
 		{% endblock %}
-		
+
 		{% block exit_button %}
 			<a href="{{ page.xrefListUrl(addm.getRecordlockerKey(xref)) }}" class="btn btn-warning">
 				<i class="fa fa-times" aria-hidden="true"></i> Close
