--- a/site/templates/twig/min/inmain/addm/xref/form/key.twig
+++ b/site/templates/twig/min/inmain/addm/xref/form/key.twig
@@ -1,7 +1,7 @@
 {#
 	var                    Description / Instance of
 	-------------------------------------------------
-	page                   ProcessWire\Page(pw_template=addm)
+	page                   ProcessWire\Page(pw_template=inmain)
 	input                  ProcessWire\WireInput
 	addm                   Dplus\Min\Inmain\Addm\Addm
 	xref                   ItemAddonItem
