FIX: code validation

--- a/site/templates/twig/code-tables/min/iasm/.js.twig
+++ b/site/templates/twig/code-tables/min/iasm/.js.twig
@@ -78,7 +78,7 @@ $(function() {
 				required: true,
 				maxlength: formCode.config.fields.code.maxlength,
 				remote: {
-					url: '{{ page.jsonApiUrl('min/validate/csccm/code/') }}',
+					url: '{{ page.jsonApiUrl('min/validate/iasm/code/') }}',
 					type: "get",
 					data: {
 						jqv: 'true',
