--- a/site/templates/twig/code-tables/min/igm/list.twig
+++ b/site/templates/twig/code-tables/min/igm/list.twig
@@ -1,76 +1,72 @@
-<div class="list-group">
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	page                   ProcessWire\Page
+	manager                Dplus\Codes\Base
+#}
+{% set response = manager.getResponse() %}
+
+{% set values = input.get %}
+{% set segments = input.urlSegments() %}
+{% set lastsegment = segments[segments|length] %}
+
+<div class="mb-3">
+	{% if page.is_print() %}
+		<button onclick="window.history.back();" class="btn btn-primary d-print-none">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back
+		</button>
+		&nbsp;
+		<button class="btn btn-primary d-print-none" onclick="window.print();return false;">
+			<i class="fa fa-print" aria-hidden="true"></i> Print
+		</button>
+	{% else %}
+		<a href="{{ page.menuUrl() }}" class="btn btn-primary">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ page.menuTitle() }}
+		</a>
+		&nbsp;
+		<a href="{{ page.get_printURL() }}" class="btn btn-primary">
+			<i class="fa fa-print" aria-hidden="true"></i> View Printable
+		</a>
+	{% endif %}
+</div>
+
+<div class="list-group codes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
-			<div class="col-1">
+			<div class="col-sm-3">
 				Code
 			</div>
-			<div class="col-3">
+			<div class="col-sm-6">
 				Description
 			</div>
-			<div class="col-1">
-				Sale
-			</div>
-			<div class="col-1">
-				Credit
-			</div>
-			<div class="col-1">
-				COGS
-			</div>
-			<div class="col-1">
-				Inventory
-			</div>
-			<div class="col-1">
-				Drop
-			</div>
-			<div class="col-3 text-center">
+			<div class="col-sm-3">
 				{% if page.is_print() == false %}
-					<a href="{{ page.url ~ '?code=new' }}" class="btn btn-light">
+					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
-					</a>
+					</button>
 				{% endif %}
 			</div>
 		</div>
 	</div>
 	{% for code in codes %}
 		{# data-code attribute and class code is for the highlight on close #}
-		<div id="{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.has_success() ) ? 'bg-success text-white' : ''}}">
+		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
 			<div class="row align-items-center">
-				<div class="col-1">
+				<div class="col-sm-3">
 					{{ code.code }}
 				</div>
-				<div class="col-3">
+				<div class="col-sm-6">
 					{{ code.description }}
 				</div>
-				<div class="col-1">
-					{{ code.sales }}
-				</div>
-				<div class="col-1">
-					{{ code.credit }}
-				</div>
-				<div class="col-1">
-					{{ code.cogs }}
-				</div>
-				<div class="col-1">
-					{{ code.inventory }}
-				</div>
-				<div class="col-1">
-					{{ code.drop_ship }}
-				</div>
-				<div class="col-3 text-center">
-					{% if recordlocker.function_locked(page.name, code.code) == false or recordlocker.function_locked_by_user(page.name, code.code) %}
-						{% if page.is_print() == false %}
-							<a href="{{ page.get_codetable_code_editURL(page.codetable, code.code) }}" class="btn btn-warning">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</a>
-							&nbsp;
-							<a href="{{ page.get_codetable_code_deleteURL(page.codetable, code.code) }}" class="btn btn-danger delete_button">
-								<i class="fa fa-trash" aria-hidden="true"></i> Delete
-							</a>
-						{% endif %}
-					{% else %}
-						<span class="badge badge-secondary">
-							<i class="fa fa-lock" aria-hidden="true"></i> Code Locked By {{ recordlocker.get_locked_user(page.name, code.code) }}
-						</span>
+				<div class="col-sm-3 text-center">
+					{% if page.is_print() == false %}
+						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
+							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+						</button>
+						&nbsp;
+						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+							<i class="fa fa-trash" aria-hidden="true"></i> Delete
+						</a>
 					{% endif %}
 				</div>
 			</div>
