--- a/site/templates/twig/code-tables/min/igm/list.twig
+++ b/site/templates/twig/code-tables/min/igm/list.twig
@@ -33,13 +33,28 @@
 <div class="list-group codes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
-			<div class="col-sm-3">
+			<div class="col-sm-2">
 				Code
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-3">
 				Description
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-1">
+				Sale
+			</div>
+			<div class="col-sm-1">
+				Credit
+			</div>
+			<div class="col-sm-1">
+				Cogs
+			</div>
+			<div class="col-sm-1">
+				Inventory
+			</div>
+			<div class="col-sm-1">
+				Drop
+			</div>
+			<div class="col-sm-2 text-center">
 				{% if page.is_print() == false %}
 					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
@@ -52,21 +67,42 @@
 		{# data-code attribute and class code is for the highlight on close #}
 		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
 			<div class="row align-items-center">
-				<div class="col-sm-3">
+				<div class="col-sm-2">
 					{{ code.code }}
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-3">
 					{{ code.description }}
 				</div>
-				<div class="col-sm-3 text-center">
+				<div class="col-sm-1">
+					{{ code.sales }}
+				</div>
+				<div class="col-sm-1">
+					{{ code.credit }}
+				</div>
+				<div class="col-sm-1">
+					{{ code.cogs }}
+				</div>
+				<div class="col-sm-1">
+					{{ code.inventory }}
+				</div>
+				<div class="col-sm-1">
+					{{ code.dropship }}
+				</div>
+				<div class="col-sm-2 text-center">
 					{% if page.is_print() == false %}
-						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
-							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-						</button>
-						&nbsp;
-						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
-							<i class="fa fa-trash" aria-hidden="true"></i> Delete
-						</a>
+						{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
+							<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</a>
+							&nbsp;
+							<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
+							</span>
+						{% endif %}
 					{% endif %}
 				</div>
 			</div>
