--- a/site/templates/twig/code-tables/min/igm/edit/form.twig
+++ b/site/templates/twig/code-tables/min/igm/edit/form.twig
@@ -146,7 +146,7 @@
 			{% endif %}
 		{% endif %}
 
-		<a href="{{ page.codeListUrl(code.code) }}" class="btn btn-warning">
+		<a href="{{ page.codeListUrl(invgroup.code) }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
 	</div>
