--- a/site/templates/twig/code-tables/min/igm/list.twig
+++ b/site/templates/twig/code-tables/min/igm/list.twig
@@ -56,9 +56,9 @@
 			</div>
 			<div class="col-sm-2 text-center">
 				{% if page.is_print() == false %}
-					<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
+					<a href="{{ page.codeAddUrl() }}" class="btn btn-light btn-sm">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add Code
-					</button>
+					</a>
 				{% endif %}
 			</div>
 		</div>
