--- a/site/templates/twig/code-tables/min/igm/edit/form.twig
+++ b/site/templates/twig/code-tables/min/igm/edit/form.twig
@@ -18,7 +18,7 @@
 							'name': 'code', 'value': invgroup.code,
 							'attributes': {
 								'maxlength': igm.fieldAttribute('code', 'maxlength'),
-								'readonly': invGroup.isNew() == false
+								'readonly': invgroup.isNew() == false
 							}
 						}
 					}
