Update IGM event functions json

--- a/site/templates/twig/code-tables/min/igm/edit/form/gl-account.twig
+++ b/site/templates/twig/code-tables/min/igm/edit/form/gl-account.twig
@@ -6,9 +6,11 @@
 			'input': {
 				'name': name,
 				'value': value,
+				'addclasses': ['gl-account'],
 				'attributes': {
 					'placeholder': label ~ ' GL Account',
-					'aria-label':  label ~ ' GL Account'
+					'aria-label':  label ~ ' GL Account',
+					'data-jqv': 'true',
 				}
 			},
 			'button': {
