Update product line ajax

--- a/site/templates/twig/code-tables/min/igm/edit/.js.twig
+++ b/site/templates/twig/code-tables/min/igm/edit/.js.twig
@@ -77,6 +77,20 @@ $(function() {
 		}
 	});
 
+	$("body").on("change", "input[name=productline]", function(e) {
+		var input = $(this);
+		var code = input.val();
+
+		var span = $('.productline-desc');
+		span.text('');
+
+		server.getProductLineCode(code, function(productline) {
+			if (productline) {
+				span.text(productline.description);
+			}
+		});
+	});
+
 /* =============================================================
 	Lookup Modal Functions
 ============================================================= */
