--- a/site/templates/twig/code-tables/min/igm/edit/.js.twig
+++ b/site/templates/twig/code-tables/min/igm/edit/.js.twig
@@ -7,6 +7,33 @@ $(function() {
 	var formCode = IgmForm.getInstance();
 
 /* =============================================================
+	Unsaved Fields Alert
+============================================================= */
+	origForm = formCode.form.serialize();
+
+	$("body").on("click", "a:not(#code-edit-form .form_button, #ajax-modal a, .swal2-modal a)", function(e) {
+		if (formCode.form.serialize() !== origForm) {
+			e.preventDefault();
+			var a = $(this);
+			var href = a.attr('href');
+
+			alert.unsavedChanges(function(save) {
+				if (save) {
+					formCode.form.find('button[type=submit]').click();
+				} else {
+					var uri = URI();
+					uri.setQuery('code', '');
+
+					$.get(uri.toString(), function() {
+						window.location.href = href;
+					});
+				}
+			});
+		}
+	});
+
+
+/* =============================================================
 	Event Functions
 ============================================================= */
 	$("body").on("change", "input.gl-account", function(e) {
